// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click submit button calls onSubmit prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -98,13 +98,12 @@
              \\"paddingVertical\\": 6,
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"test\\"
+       value=\\"\\"
      />
    </View>
    <SvgMock
-     onPress={[Function handleSubmit]}
      testID=\\"SubmitButton\\"
    />
  </RCTSafeAreaView>"
`;

exports[`click submit button calls onSubmit prop fails 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`handles start edit 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -9,53 +9,84 @@
      }
    }
  >
    <View
      style={
-       Array [
+       Object {
+         \\"backgroundColor\\": \\"#505256\\",
+         \\"borderRadius\\": 25,
+       }
+     }
+   >
+     <View
+       accessible={true}
+       focusable={true}
+       isTVSelectable={true}
+       onClick={[Function bound touchableHandlePress]}
+       onResponderGrant={[Function bound touchableHandleResponderGrant]}
+       onResponderMove={[Function bound touchableHandleResponderMove]}
+       onResponderRelease={[Function bound touchableHandleResponderRelease]}
+       onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
+       onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
+       onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
+       style={
          Object {
-           \\"alignItems\\": \\"center\\",
-           \\"justifyContent\\": \\"center\\",
-         },
+           \\"opacity\\": 1,
+         }
+       }
+       testID=\\"IconButton\\"
+     >
+       <View
+         style={
            Array [
-           Object {
-             \\"borderRadius\\": 18,
-             \\"height\\": 36,
-             \\"width\\": 36,
-           },
              Object {
-             \\"backgroundColor\\": \\"rgb(199, 163, 67)\\",
+               \\"backgroundColor\\": \\"transparent\\",
              },
-           undefined,
-         ],
+             null,
+             Object {},
+             null,
            ]
          }
        >
          <Text
+           allowFontScaling={false}
            style={
              Array [
                Object {
-             \\"color\\": \\"#505256\\",
+                 \\"color\\": undefined,
+                 \\"fontSize\\": 12,
+               },
+               Array [
+                 Object {
+                   \\"color\\": \\"#ffffff\\",
                  },
                  Object {
-             \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                   \\"fontSize\\": 16,
                  },
                  Array [
                    Object {
-               \\"color\\": \\"#ffffff\\",
+                     \\"margin\\": 10,
                    },
                    Object {
-               \\"fontSize\\": 20,
-               \\"fontWeight\\": \\"300\\",
+                     \\"color\\": \\"#ffffff\\",
                    },
+                 ],
                ],
+               Object {
+                 \\"fontFamily\\": \\"icomoon\\",
+                 \\"fontStyle\\": \\"normal\\",
+                 \\"fontWeight\\": \\"normal\\",
+               },
+               Object {},
              ]
            }
          >
-       -
+           
          </Text>
+       </View>
      </View>
+   </View>
    <View
      style={
        Object {
          \\"backgroundColor\\": \\"#ECEEF2\\",
          \\"borderRadius\\": 8,
@@ -98,12 +129,13 @@
              \\"paddingVertical\\": 6,
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"\\"
+       value=\\"esse repellat quisquam\\"
      />
    </View>
    <SvgMock
+     onPress={[Function handleSubmit]}
      testID=\\"SubmitButton\\"
    />
  </RCTSafeAreaView>"
`;

exports[`renders with disabled submit button 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -98,13 +98,12 @@
              \\"paddingVertical\\": 6,
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"test\\"
+       value=\\"\\"
      />
    </View>
    <SvgMock
-     onPress={[Function handleSubmit]}
      testID=\\"SubmitButton\\"
    />
  </RCTSafeAreaView>"
`;

exports[`renders with text entered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -98,12 +98,13 @@
              \\"paddingVertical\\": 6,
            },
          ]
        }
        underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-       value=\\"\\"
+       value=\\"test\\"
      />
    </View>
    <SvgMock
+     onPress={[Function handleSubmit]}
      testID=\\"SubmitButton\\"
    />
  </RCTSafeAreaView>"
`;

exports[`renders without actions 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 12,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "borderRadius": 18,
            "height": 36,
            "width": 36,
          },
          Object {
            "backgroundColor": "rgb(199, 163, 67)",
          },
          undefined,
        ],
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 20,
              "fontWeight": "300",
            },
          ],
        ]
      }
    >
      -
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "borderRadius": 8,
        "flex": 1,
        "marginHorizontal": 8,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={true}
      autoFocus={false}
      blurOnSubmit={true}
      multiline={false}
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder="Placeholder"
      placeholderTextColor="#B2B0B2"
      rejectResponderTermination={true}
      returnKeyType="done"
      selectionColor="#005A7F"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "#52C5DC",
            "borderBottomWidth": 1,
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "letterSpacing": 0.25,
            "paddingVertical": 5,
          },
          Object {
            "borderBottomWidth": 0,
            "color": "#4E4C4E",
            "flex": 1,
            "fontSize": 14,
            "paddingHorizontal": 12,
            "paddingVertical": 6,
          },
        ]
      }
      underlineColorAndroid="rgba(0,0,0,0)"
      value=""
    />
  </View>
  <SvgMock
    testID="SubmitButton"
  />
</RCTSafeAreaView>
`;
